--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <img id="jose" src="images/WDI26_Jose.jpg">
         <h1 class="jumbotron-heading">Web developer</h1>
         <br>
-        <p class="lead text-muted">I arrived to Australia in 2013 looking for new professional opportunities and experience living abroad. I was working and traveling for a while so I decided to share my knowledge about travelling around Australia through a travel blog.
-          <br> Designing and building my own blog I realised that I really enjoy programming so I decided to enrol in a few online courses and get a sense of what web development about.
-          <br> I definitely found my passion, so I decided to deep into it and take the Full Immerse Web Development Course at General Assembly. I am currently looking forward to starting a new career in the Web Development filed. I am eager to learn
-          more and improve my programming skills.</p>
+        <p class="lead text-muted">I arrived to Australia in 2013 looking for new professional opportunities and experience living abroad. I was working and traveling for a while so I decided to share my knowledge about travelling around Australia through a <a href="https://www.tiempodexplorar.com">travel blog</a>.
+          <br><br> Designing and building my own blog I realised that I really enjoy programming so I decided to enrol in a few online courses like <strong><u>Codeacademy and Udacity</u></strong> and get a sense of what web development about.
+          <br><br> I definitely found my passion, so I decided to deep into it and take the <strong><u>Full Immerse Web Development Course at General Assembly</u></strong>. I am currently looking forward to starting a new career in the Web Development
+          filed. I am eager to learn more and improve my programming skills.</p>
         <br>
 
       </div>
@@ -55,12 +55,13 @@
         <div class="row-1">
           <div class="col-md-6">
             <div class="card mb-6 box-shadow">
-              <img class="card-img-top" id="tic-img" src="images/Screen Shot 2018-05-14 at 2.37.32 pm.png" alt="Card image cap">
+              <img class="card-img-top" id="bank-img" src="images/Screen Shot 2018-05-31 at 8.20.20 am.png" alt="Card image cap">
               <div class="card-body">
-                <p class="card-text">Tic-tac-toe (also known as noughts and crosses or Xs and Os) is a paper-and-pencil game for two players, X and O, who take turns marking the spaces in a 3×3 grid.</p><br>
+                <p class="card-text">Bank of time is an application to conntact people that need help with a task and people who are masters on that task.</p><br>
+                <p>HTML, CSS, JavaScript, Github, Ruby on Rails, Jquery, Bootstrap and Heroku.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a href="https://joseparraa.github.io/project0/">Live demo</a> | <a href="https://github.com/JoseParraA/project0">Github</a>
+                    <a href="https://bank-of-time.herokuapp.com/">Live demo</a> | <a href="https://github.com/JoseParraA/Bank-of-time">Github</a>
                   </div>
                 </div>
               </div>
@@ -85,32 +86,26 @@
         <div class="row-2">
           <div class="col-md-6">
             <div class="card mb-6 box-shadow">
-              <img class="card-img-top" id="solar-img" src="images/Screen Shot 2018-05-30 at 8.12.39 pm.png" alt="Card image cap">
+              <img class="card-img-top" id="tic-img" src="images/Screen Shot 2018-05-14 at 2.37.32 pm.png" alt="Card image cap">
               <div class="card-body">
-                <p class="card-text">This is a website where a user can see all relevant information about that planet. A user can add planets and moons to the solar system. There is an animation of the planets around the sun. Any user of a planet will be added to the solar
-                  system.
-                </p><br>
-                <p>HTML, CSS, JavaScript, Github, Jquery, Ruby on Rails, ThreeJS, Heroku and Cloudinary.</p>
+                <p class="card-text">Tic-tac-toe (also known as noughts and crosses or Xs and Os) is a paper-and-pencil game for two players, X and O, who take turns marking the spaces in a 3×3 grid.</p><br>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a href="https://wiki-solar.herokuapp.com/">Live demo</a> | <a href="https://github.com/JoseParraA/wiki-solar">Github</a>
+                    <a href="https://joseparraa.github.io/project0/">Live demo</a> | <a href="https://github.com/JoseParraA/project0">Github</a>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-
           <div class="col-md-6">
             <div class="card mb-6 box-shadow">
-              <img class="card-img-top" id="bank-img" src="images/Screen Shot 2018-05-31 at 8.20.20 am.png" alt="Card image cap">
+              <img class="card-img-top" id="solar-img" src="images/Screen Shot 2018-05-30 at 8.12.39 pm.png" alt="Card image cap">
               <div class="card-body">
-                <p class="card-text">Bank of time is an application to conntact people that need help with a task and people who are masters on that task. The person who is the helper or the provider recive a credit for the same amount of hour that he use on the task. This
-                  credit can be used on someone who help him/her in another task.</p><br>
-                <p>HTML, CSS, JavaScript, Github, Ruby on Rails, Jquery, Bootstrap and Heroku.</p>
-
+                <p class="card-text">This is a website where a user can see all relevant information about that planet. A user can add planets and moons to the solar system. There is an animation of the planets around the sun.</p><br>
+                <p>HTML, CSS, JavaScript, Github, Jquery, Ruby on Rails, ThreeJS, Heroku and Cloudinary.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a href="https://bank-of-time.herokuapp.com/">Live demo</a> | <a href="https://github.com/JoseParraA/Bank-of-time">Github</a>
+                    <a href="https://wiki-solar.herokuapp.com/">Live demo</a> | <a href="https://github.com/JoseParraA/wiki-solar">Github</a>
                   </div>
                 </div>
               </div>
@@ -125,7 +120,8 @@
 
     <div class="back-to-top">
       <p class="float-right">
-        <a id="back" href="#">Back to top</a>
+        <a href="https://www.dropbox.com/s/64nwt6ob0wpx6po/jose%20parra%20alcolea.pdf?dl=0" id="resume">Download my RESUME</a><br>
+        <br><a id="back" href="#">Back to top</a>
       </p>
     </div>
   </main>
