--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
         <img id="jose" src="images/WDI26_Jose.jpg">
         <h1 class="jumbotron-heading">Web developer</h1>
         <br>
-        <p class="lead text-muted">I arrived to Australia in 2013 looking for new professional opportunities and experience living abroad. I was working and traveling for a while so I decided to share my knowledge about travelling around Australia through a <a href="https://www.tiempodexplorar.com">travel blog</a>.
+        <p class="lead text-muted">I arrived to Australia in 2013 looking for new professional opportunities and experience living abroad. I was working and traveling for a while so I decided to share my knowledge about travelling around Australia
+          through a <a href="https://www.tiempodexplorar.com">travel blog</a>.
           <br><br> Designing and building my own blog I realised that I really enjoy programming so I decided to enrol in a few online courses like <strong><u>Codeacademy and Udacity</u></strong> and get a sense of what web development about.
-          <br><br> I definitely found my passion, so I decided to deep into it and take the <strong><u>Full Immerse Web Development Course at General Assembly</u></strong>. I am currently looking forward to starting a new career in the Web Development
+          <br><br> I definitely found my passion, so I decided to deep into it and take the <strong><u>Full Immerse Web Development Course at General Assembly</u></strong>. I am currently looking forward to starting a new career in the Web
+          Development
           filed. I am eager to learn more and improve my programming skills.</p>
         <br>
 
@@ -120,7 +122,7 @@
 
     <div class="back-to-top">
       <p class="float-right">
-        <a href="https://www.dropbox.com/s/64nwt6ob0wpx6po/jose%20parra%20alcolea.pdf?dl=0" id="resume">Download my RESUME</a><br>
+        <a href="https://www.dropbox.com/s/4q2swoabnha7q1q/jose%20parra%20alcolea%20%285%29.pdf?dl=0" id="resume">Download my RESUME</a><br>
         <br><a id="back" href="#">Back to top</a>
       </p>
     </div>
